[package]
name = "zom-pew-pew"
version = "0.1.0"
authors = ["karl.runge <karl.runge@defendtex.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy =      "0.5.0"
mathrs =    "0.0.6"
cgmath =    "0.18.0"
rand =      "0.8.3"
